test/expected/declare_o_brackets_2i_i-c++20.out
declare [] as operator (int, int) returning int
                        ^
25: error: member operator "[]" must have exactly 1 parameter
